@@ -1,5 +1,6 @@
 03 Feb 1999
 - fixed -caption
+- some adjustments in geometry management
 01 Feb 1999 Matt Gerassimoff <mg@s303.msoe.edu>
 - scroll line wise through the history buffer using Shift-Up/Down
 31 Jan 1998
